fixed alignment

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -172,3 +172,8 @@ nav > a {
 
 }
 
+.ad {
+	margin-top:15px;
+	text-align:center;
+
+}
